[package]
name = "kelderscherm_upload"
description = "uploads images to kelderscherm"
authors = ["Tibo Ulens"]
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
anyhow = "1.0.57"
bytes = "1.1.0"
clap = "3.2.5"
futures-util = "0.3.21"
image = "0.24.2"
num_cpus = "1.13.1"
rand = "0.8.5"
tokio = { version="1.19.2", features=["full"] }
tokio-tungstenite = "0.17.1"
url = "2.2.2"
